--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -79,3 +79,15 @@ h3 {
   text-align: center;
   width: 500px;
 }
+
+.top30 {
+  margin-top: 50px;
+}
+
+.top50 {
+  margin-top: 50px;
+}
+
+.top100 {
+  margin-top: 100px;
+}
