--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -46,8 +46,8 @@ h3 {
 }
 .imgPreview {
   text-align: center;
-  margin: 5px 15px;
-  height: 200px;
+  margin-left: 50px;
+  height: 250px;
   width: 500px;
   border-left: 1px solid #808080;
   border-right: 1px solid #808080;
@@ -62,6 +62,19 @@ h3 {
   width: 100%;
   margin-top: 20px;
 }
+
+.imgShow {
+  text-align: center;
+  margin-left: 50px;
+  margin-top: 50px;
+  height: 250px;
+  width: 500px;
+}
+.imgShow img {
+  width: 100%;
+  height: 100%;
+}
+
 .submitButton {
   padding: 12px;
   margin-left: 10px;
@@ -90,4 +103,20 @@ h3 {
 
 .top100 {
   margin-top: 100px;
+}
+
+.Div1 {
+  float: left;
+  width: 42%;
+  height: 400px;
+  border-style: groove;
+  margin-left: 100px;
+}
+.Div2 {
+  background-color: rgb(91, 94, 91);
+  width: 42%;
+  height: 400px;
+  float: right;
+  border-style: groove;
+  margin-right: 30px;
 }
